--- a/index.html
+++ b/index.html
@@ -504,6 +504,16 @@
 <script src="resources/js/scripts.js"></script>
 <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SKS2XVW6BH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SKS2XVW6BH');
+</script>
+
 </body>
 
 </html>
