--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
            </div>
        </nav>
        <div class="hero-text-box">
-           <h1>Goodbye junk food. <br> Hello super healthy meals.<br></h1>
+           <h1>Goodbye junk food. <br> Goodbye super healthy meals.<br></h1>
            <a class="btn btn-full js--scroll-to-plans" href="#">I’m hungry!</a>
            <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more!</a>
        </div>
